Fix address html file with answers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-04-25 Wed 12:58 -->
+<!-- 2018-04-27 Fri 18:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -602,7 +602,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>April 25, 2018</span>
+<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>April 27, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -610,11 +610,11 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd44b0aa">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#org4347fce">2. Functional programming (with the package purrr)</a>
+<li><a href="#org06db1d0">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#org0666ea9">2. Functional programming (with the package purrr)</a>
 <ul>
-<li><a href="#org7085e97">Target audience</a></li>
-<li><a href="#org62fc0e7">Software requirements</a></li>
+<li><a href="#orgf94c791">Target audience</a></li>
+<li><a href="#orga95af4c">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -628,9 +628,9 @@ Most of us biologists, do not learn R properly: we do not have a computing scien
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-orgd44b0aa" class="outline-2">
-<h2 id="orgd44b0aa">1. Portability, reproducibility, and readability</h2>
-<div class="outline-text-2" id="text-orgd44b0aa">
+<div id="outline-container-org06db1d0" class="outline-2">
+<h2 id="org06db1d0">1. Portability, reproducibility, and readability</h2>
+<div class="outline-text-2" id="text-org06db1d0">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -647,9 +647,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/Internat
 </div>
 </div>
 
-<div id="outline-container-org4347fce" class="outline-2">
-<h2 id="org4347fce">2. Functional programming (with the package purrr)</h2>
-<div class="outline-text-2" id="text-org4347fce">
+<div id="outline-container-org0666ea9" class="outline-2">
+<h2 id="org0666ea9">2. Functional programming (with the package purrr)</h2>
+<div class="outline-text-2" id="text-org0666ea9">
 <p>
 What do you do when you  need to apply similar code to multiple datasets or multiple variables within datasets?<br />
 </p>
@@ -677,9 +677,9 @@ The workshop material (without the solutions to the short challenges) can be fou
 </p>
 </div>
 
-<div id="outline-container-org7085e97" class="outline-3">
-<h3 id="org7085e97">Target audience</h3>
-<div class="outline-text-3" id="text-org7085e97">
+<div id="outline-container-orgf94c791" class="outline-3">
+<h3 id="orgf94c791">Target audience</h3>
+<div class="outline-text-3" id="text-orgf94c791">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions, or<br /></li>
 <li>Advanced users familiar with functional programming using the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions family and interested in discovering the "purrring" way.<br /></li>
@@ -687,9 +687,9 @@ The workshop material (without the solutions to the short challenges) can be fou
 </div>
 </div>
 
-<div id="outline-container-org62fc0e7" class="outline-3">
-<h3 id="org62fc0e7">Software requirements</h3>
-<div class="outline-text-3" id="text-org62fc0e7">
+<div id="outline-container-orga95af4c" class="outline-3">
+<h3 id="orga95af4c">Software requirements</h3>
+<div class="outline-text-3" id="text-orga95af4c">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
@@ -711,7 +711,7 @@ devtools::<span class="org-ess-function-call">install_github</span><span class="
 </div>
 
 <p>
-No data file is needed for this workshop<a href="https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_functional-programming_with-answer.html">.</a><br />
+No data file is needed for this workshop<a href="https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_functional-programming_with-answers.html">.</a><br />
 </p>
 
 <br>
