--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-18 Sat 20:07 -->
+<!-- 2018-08-19 Sun 07:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -614,7 +614,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>August 18, 2018</span>
+<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>August 19, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -622,11 +622,11 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1ede6f3">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#orgdfc5a61">2. Functional programming</a>
+<li><a href="#org5985cf3">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#org318545e">2. Functional programming</a>
 <ul>
-<li><a href="#orga395d1a">Target audience</a></li>
-<li><a href="#org85ef4e7">Software requirements</a></li>
+<li><a href="#orgfa7728d">Target audience</a></li>
+<li><a href="#orge39d89a">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -640,9 +640,9 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-org1ede6f3" class="outline-2">
-<h2 id="org1ede6f3">1. Portability, reproducibility, and readability</h2>
-<div class="outline-text-2" id="text-org1ede6f3">
+<div id="outline-container-org5985cf3" class="outline-2">
+<h2 id="org5985cf3">1. Portability, reproducibility, and readability</h2>
+<div class="outline-text-2" id="text-org5985cf3">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -655,15 +655,15 @@ Code that is portable, reproducible, and readable is critical when collaborating
 </div>
 </div>
 
-<div id="outline-container-orgdfc5a61" class="outline-2">
-<h2 id="orgdfc5a61">2. Functional programming</h2>
-<div class="outline-text-2" id="text-orgdfc5a61">
+<div id="outline-container-org318545e" class="outline-2">
+<h2 id="org318545e">2. Functional programming</h2>
+<div class="outline-text-2" id="text-org318545e">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
 
 <p>
-Imagine that you have a banding data file and you just wrote some code to transform the raw tarsus length data in a format suitable to analysis. Now, you would like to apply the same code to other variables of your banding data.<br />
+Imagine that you have a banding data file and you just wrote some code to transform the raw tarsus length data in a format suitable to analysis. Now, you would like to apply the same code to other variables in your banding data.<br />
 Or you wrangled the data in a file by a series of steps. But you have a whole folder full of similar files&#x2026;<br />
 </p>
 
@@ -672,7 +672,7 @@ How do you do this?<br />
 </p>
 
 <p>
-Copying and pasting code, besides being tedious, is a form of hard coding and is thus prone to errors. Loops provide a much better approach, but they require a lot of code and still involve some level of repetition. They are also hard to read and the goal of your code might not be obvious right away when you will go back to it or if you give it to someone else. Functional programming is a coding paradigm in which functions are applied to several elements in a vectorized fashion. This makes for compact code that is much clearer and takes advantage of the vector-based nature of R. The <code class="src src-R">purrr</code> package (part of the core <code class="src src-R">tidyverse</code>) provides a collection of efficient and consistent tools to functional programming in R.<br />
+Copying and pasting code, besides being tedious, is a form of hard coding and is thus prone to errors. Loops provide a much better approach, but they require a lot of code and still involve some level of repetition. They are also hard to read and the goal of your code might not be obvious right away when you go back to it or you give it to someone else. Functional programming is a coding paradigm in which functions are applied to several elements in a vectorized fashion. This makes for compact code that is much clearer and takes advantage of the vector-based nature of R. The <code class="src src-R">purrr</code> package (part of the core <code class="src src-R">tidyverse</code>) provides a collection of efficient and consistent tools to functional programming in R.<br />
 </p>
 
 <p>
@@ -686,9 +686,9 @@ Most of our workshop time will focus on:<br />
 </ul>
 </div>
 
-<div id="outline-container-orga395d1a" class="outline-3">
-<h3 id="orga395d1a">Target audience</h3>
-<div class="outline-text-3" id="text-orga395d1a">
+<div id="outline-container-orgfa7728d" class="outline-3">
+<h3 id="orgfa7728d">Target audience</h3>
+<div class="outline-text-3" id="text-orgfa7728d">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -696,9 +696,9 @@ Most of our workshop time will focus on:<br />
 </div>
 </div>
 
-<div id="outline-container-org85ef4e7" class="outline-3">
-<h3 id="org85ef4e7">Software requirements</h3>
-<div class="outline-text-3" id="text-org85ef4e7">
+<div id="outline-container-orge39d89a" class="outline-3">
+<h3 id="orge39d89a">Software requirements</h3>
+<div class="outline-text-3" id="text-orge39d89a">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
