--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-19 Sun 07:45 -->
+<!-- 2018-08-20 Mon 17:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -614,7 +614,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>August 19, 2018</span>
+<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>August 20, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -622,11 +622,14 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org5985cf3">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#org318545e">2. Functional programming</a>
+<li><a href="#orgbc56739">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#orgaa8bed1">2. Functional programming</a></li>
+<li><a href="#orgab9d61f">Logistical considerations</a>
 <ul>
-<li><a href="#orgfa7728d">Target audience</a></li>
-<li><a href="#orge39d89a">Software requirements</a></li>
+<li><a href="#org1e4c186">Target audience</a></li>
+<li><a href="#org17d27c0">Where and when?</a></li>
+<li><a href="#orgae245c2">No fee nor registration</a></li>
+<li><a href="#orgbeea222">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -640,9 +643,9 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-org5985cf3" class="outline-2">
-<h2 id="org5985cf3">1. Portability, reproducibility, and readability</h2>
-<div class="outline-text-2" id="text-org5985cf3">
+<div id="outline-container-orgbc56739" class="outline-2">
+<h2 id="orgbc56739">1. Portability, reproducibility, and readability</h2>
+<div class="outline-text-2" id="text-orgbc56739">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -655,9 +658,9 @@ Code that is portable, reproducible, and readable is critical when collaborating
 </div>
 </div>
 
-<div id="outline-container-org318545e" class="outline-2">
-<h2 id="org318545e">2. Functional programming</h2>
-<div class="outline-text-2" id="text-org318545e">
+<div id="outline-container-orgaa8bed1" class="outline-2">
+<h2 id="orgaa8bed1">2. Functional programming</h2>
+<div class="outline-text-2" id="text-orgaa8bed1">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -685,10 +688,15 @@ Most of our workshop time will focus on:<br />
 <li>And a bonus unrelated sidetrack on a few of the less used pipes of the <code class="src src-R">magrittr</code> package which are so useful when playing in the <code class="src src-R">tidyverse</code>.<br /></li>
 </ul>
 </div>
+</div>
 
-<div id="outline-container-orgfa7728d" class="outline-3">
-<h3 id="orgfa7728d">Target audience</h3>
-<div class="outline-text-3" id="text-orgfa7728d">
+<div id="outline-container-orgab9d61f" class="outline-2">
+<h2 id="orgab9d61f">Logistical considerations</h2>
+<div class="outline-text-2" id="text-orgab9d61f">
+</div>
+<div id="outline-container-org1e4c186" class="outline-3">
+<h3 id="org1e4c186">Target audience</h3>
+<div class="outline-text-3" id="text-org1e4c186">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -696,9 +704,29 @@ Most of our workshop time will focus on:<br />
 </div>
 </div>
 
-<div id="outline-container-orge39d89a" class="outline-3">
-<h3 id="orge39d89a">Software requirements</h3>
-<div class="outline-text-3" id="text-orge39d89a">
+<div id="outline-container-org17d27c0" class="outline-3">
+<h3 id="org17d27c0">Where and when?</h3>
+<div class="outline-text-3" id="text-org17d27c0">
+<p>
+<b>Date:</b> Thursday 23<br />
+<b>Time:</b> 8pm-10pm<br />
+<b>Place:</b> TBA (look at the on-line schedule)<br />
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgae245c2" class="outline-3">
+<h3 id="orgae245c2">No fee nor registration</h3>
+<div class="outline-text-3" id="text-orgae245c2">
+<p>
+There is no fee nor registration for this event. Just show up with a laptop ready for the workshop (see below).<br />
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgbeea222" class="outline-3">
+<h3 id="orgbeea222">Software requirements</h3>
+<div class="outline-text-3" id="text-orgbeea222">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
