--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-20 Mon 17:50 -->
+<!-- 2018-08-20 Mon 17:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -622,14 +622,14 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbc56739">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#orgaa8bed1">2. Functional programming</a></li>
-<li><a href="#orgab9d61f">Logistical considerations</a>
+<li><a href="#org1da38ef">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#orgc45c8fa">2. Functional programming</a></li>
+<li><a href="#orgb0b5d4b">Logistical considerations</a>
 <ul>
-<li><a href="#org1e4c186">Target audience</a></li>
-<li><a href="#org17d27c0">Where and when?</a></li>
-<li><a href="#orgae245c2">No fee nor registration</a></li>
-<li><a href="#orgbeea222">Software requirements</a></li>
+<li><a href="#orgd5d13ad">Target audience</a></li>
+<li><a href="#orgd7e26c9">Where and when?</a></li>
+<li><a href="#org734bf0e">No fee nor registration</a></li>
+<li><a href="#orgfbb17a9">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -643,9 +643,9 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-orgbc56739" class="outline-2">
-<h2 id="orgbc56739">1. Portability, reproducibility, and readability</h2>
-<div class="outline-text-2" id="text-orgbc56739">
+<div id="outline-container-org1da38ef" class="outline-2">
+<h2 id="org1da38ef">1. Portability, reproducibility, and readability</h2>
+<div class="outline-text-2" id="text-org1da38ef">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -658,9 +658,9 @@ Code that is portable, reproducible, and readable is critical when collaborating
 </div>
 </div>
 
-<div id="outline-container-orgaa8bed1" class="outline-2">
-<h2 id="orgaa8bed1">2. Functional programming</h2>
-<div class="outline-text-2" id="text-orgaa8bed1">
+<div id="outline-container-orgc45c8fa" class="outline-2">
+<h2 id="orgc45c8fa">2. Functional programming</h2>
+<div class="outline-text-2" id="text-orgc45c8fa">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -690,13 +690,13 @@ Most of our workshop time will focus on:<br />
 </div>
 </div>
 
-<div id="outline-container-orgab9d61f" class="outline-2">
-<h2 id="orgab9d61f">Logistical considerations</h2>
-<div class="outline-text-2" id="text-orgab9d61f">
+<div id="outline-container-orgb0b5d4b" class="outline-2">
+<h2 id="orgb0b5d4b">Logistical considerations</h2>
+<div class="outline-text-2" id="text-orgb0b5d4b">
 </div>
-<div id="outline-container-org1e4c186" class="outline-3">
-<h3 id="org1e4c186">Target audience</h3>
-<div class="outline-text-3" id="text-org1e4c186">
+<div id="outline-container-orgd5d13ad" class="outline-3">
+<h3 id="orgd5d13ad">Target audience</h3>
+<div class="outline-text-3" id="text-orgd5d13ad">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -704,9 +704,9 @@ Most of our workshop time will focus on:<br />
 </div>
 </div>
 
-<div id="outline-container-org17d27c0" class="outline-3">
-<h3 id="org17d27c0">Where and when?</h3>
-<div class="outline-text-3" id="text-org17d27c0">
+<div id="outline-container-orgd7e26c9" class="outline-3">
+<h3 id="orgd7e26c9">Where and when?</h3>
+<div class="outline-text-3" id="text-orgd7e26c9">
 <p>
 <b>Date:</b> Thursday 23<br />
 <b>Time:</b> 8pm-10pm<br />
@@ -715,18 +715,18 @@ Most of our workshop time will focus on:<br />
 </div>
 </div>
 
-<div id="outline-container-orgae245c2" class="outline-3">
-<h3 id="orgae245c2">No fee nor registration</h3>
-<div class="outline-text-3" id="text-orgae245c2">
+<div id="outline-container-org734bf0e" class="outline-3">
+<h3 id="org734bf0e">No fee nor registration</h3>
+<div class="outline-text-3" id="text-org734bf0e">
 <p>
-There is no fee nor registration for this event. Just show up with a laptop ready for the workshop (see below).<br />
+There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgbeea222" class="outline-3">
-<h3 id="orgbeea222">Software requirements</h3>
-<div class="outline-text-3" id="text-orgbeea222">
+<div id="outline-container-orgfbb17a9" class="outline-3">
+<h3 id="orgfbb17a9">Software requirements</h3>
+<div class="outline-text-3" id="text-orgfbb17a9">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
